<resources>
    <string name="app_name">ControleUfla</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Login</string>
    <string name="prompt_password">Senha</string>
    <string name="action_sign_in">Logar</string>
    <string name="action_cadastrar">Cadastrar</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="action_settings">Settings</string>
    <string name="btnScan">Scan</string>
    <string name="txtbtnQRcode">Leitor de QR Code</string>
    <string name="txtbtnBarcode">Leitor de Código de Barra</string>
</resources>
